--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boda-premium-itzel-carlos",
+  "name": "quince-premium-frida-270925",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
@@ -48,6 +49,7 @@
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.18.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@types/html2canvas": "^0.5.35",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
