--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "geist": "^1.3.1",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.18.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "qrcode": "^1.5.4",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -69,6 +71,7 @@
     "@types/html2canvas": "^0.5.35",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.32.0",
