--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^8.18.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^19",
     "react-day-picker": "9.8.0",
